# reinforcement-learning-msci-project

./: .gitignore  README.md
code/: .gitignore  .pre-commit-config.yaml  README.md  config.toml  mkdocs.yml  profile_result.prof  profile_result_no_numba.prof  profile_result_no_numba_two.prof  profile_result_numba.prof  profile_result_numba_two.prof  pyproject.toml  setup.cfg
code/docs/: 404.html  index.html  objects.inv
code/docs/SUMMARY/: index.html
code/docs/reference/: index.html
code/docs/reference/controller/: index.html
code/docs/reference/main/: index.html
code/docs/reference/model/: index.html
code/docs/reference/profile/: index.html
code/docs/reference/view/: index.html
code/docs/search/: search_index.json
code/scripts/: gen_ref_pages.py
code/scripts/static_docs/: index.md
code/src/: __init__.py  config.toml  main.py  profile.py
code/src/config/: base_section.py  grid_world_section.py  reader.py
code/src/controller/: __init__.py  agent_enviroment_factory.py  base_bridge.py  cell_configuration.py  controller.py  learning_instance_controller.py  learning_system_controller.py  learning_system_controller_factory.py  options.py  state_description.py  state_update_bridge.py  user_action_bridge.py
code/src/controller/hyper_parameter_controller/: __init__.py  controller.py  request_bridge.py  update_bridge.py
code/src/controller/learning_system_controller/: __init__.py  controller.py  state_update_bridge.py  user_action_bridge.py
code/src/controller/report_generation_controller/: controller.py  report_request_bridge.py  report_update_bridge.py
code/src/controller/user_action_handlers/: auto_progress_handler.py  base_handler.py  progress_handler.py  responsibility_chain.py  set_options_handler.py  standard_handler.py
code/src/model/: __init__.py  transition_information.py
code/src/model/agents/: __init__.py  base_agent.py
code/src/model/config/: __init__.py  agent_section.py  base_section.py  grid_world_section.py  gui_section.py  reader.py
code/src/model/dynamics/: DynamicBase.py  __init__.py  actions.py  base_dynamics.py  cliff_dynamics.py  collection_dynamics.py  grid_world.py  wind_dynamics.py
code/src/model/hyperparameters/: __init__.py  base_parameter_strategy.py  config_parameter_strategy.py  hyper_parameter_system.py  parameter_evaluator.py  report_data.py  report_generator.py  tuning_information.py  tuning_parameter_strategy.py
code/src/view/: App.py  GridWorldView.py  __init__.py  grid_world_view.py  interaction_controls.py  main_tab_area.py  option_controls.py  option_display_text.py  report_state_publisher.py  state_publisher.py  view_root_v2.py  visibility_observer.py
code/tests/: test_config.py
code/tests/agents/: agent_dynamics_mock.py  test_dynamics_distribution.py  test_value_ittr.py
code/tests/dynamics/: mini_config.py  test_collection_dynamics.py  test_dynamics_distribution.py  test_grid_world.py
code/tests/state/: create_test_state.py  test_builder.py  test_pool.py  test_state.py
code/tests/state_value/: mocks.py  test_normaliser.py
(+373 files in other folders)
