[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Cougar Tasker <cougartasker@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.10, < 3.12"
numpy = "^1.26.1"
kivy = "^2.2.1"
toml = "^0.10.2"
schema = "^0.7.5"
kivymd = "^1.1.1"
immutables = "^0.20"


[tool.poetry.scripts]
start = "src.main:main"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
mypy = "^1.6.1"
pytest-mock = "^3.12.0"
types-toml = "^0.10.8.7"
pep8-naming = "^0.13.3"
wemake-python-styleguide = "^0.18.0"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 80

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


